better box, fix button on ios

--- a/packages/daisyui/src/components/button.css
+++ b/packages/daisyui/src/components/button.css
@@ -22,12 +22,10 @@
   background-image: none, var(--btn-noise);
   border-width: var(--border);
   border-style: solid;
-  border-color: var(--btn-border);
+  border-color: oklch(27% 0.006 286.033);
   text-shadow: 0 0.5px oklch(100% 0 0 / calc(var(--depth) * 0.15));
   touch-action: manipulation;
-  box-shadow:
-    0 0.5px 0 0.5px oklch(100% 0 0 / calc(var(--depth) * 6%)) inset,
-    var(--btn-shadow);
+  box-shadow: 2.5px 2.5px 0px oklch(27% 0.006 286.033);
   --size: calc(var(--size-field, 0.25rem) * 10);
   --btn-bg: var(--btn-color, var(--color-base-200));
   --btn-fg: var(--color-base-content);
@@ -52,17 +50,18 @@
     isolation: isolate;
   }
 
-  &:active:not(.btn-active) {
-    translate: 0 0.5px;
-    --btn-bg: color-mix(in oklab, var(--btn-color, var(--color-base-200)), #000 5%);
-    --btn-border: color-mix(in oklab, var(--btn-color, var(--color-base-200)), #000 7%);
-    --btn-shadow: 0 0 0 0 oklch(0% 0 0/0), 0 0 0 0 oklch(0% 0 0/0);
+  @media (hover: none) {
+    &:hover:not(.btn-active, :active, :focus-visible, :disabled, [disabled], .btn-disabled) {
+      translate: 0 0.5px;
+      --btn-bg: color-mix(in oklab, var(--btn-color, var(--color-base-200)), #000 5%);
+      --btn-border: color-mix(in oklab, var(--btn-color, var(--color-base-200)), #000 7%);
+      --btn-shadow: 0 0 0 0 oklch(0% 0 0/0), 0 0 0 0 oklch(0% 0 0/0);
+    }
   }
 
   &:is(:disabled, [disabled], .btn-disabled) {
     &:not(.btn-link, .btn-ghost) {
       @apply bg-base-content/10;
-      box-shadow: none;
     }
 
     @apply pointer-events-none;
