--- a/packages/daisyui/src/components/card.css
+++ b/packages/daisyui/src/components/card.css
@@ -4,6 +4,8 @@
   transition: outline 0.2s ease-in-out;
   outline: 0 solid #0000;
   outline-offset: 2px;
+  box-shadow: 2.5px 2.5px 0px oklch(27% 0.006 286.033);
+
   &:focus {
     @apply outline-hidden;
   }
@@ -29,11 +31,11 @@
   }
 
   &:where(.card-border) {
-    border: var(--border) solid var(--color-base-200);
+    border: var(--border) solid oklch(27% 0.006 286.033);
   }
 
   &:where(.card-dash) {
-    border: var(--border) dashed var(--color-base-200);
+    border: var(--border) dashed oklch(27% 0.006 286.033);
   }
 
   &.image-full {
